responsiveness and content updated

--- a/public-directory/_index.html
+++ b/public-directory/_index.html
@@ -60,22 +60,22 @@
 
         <div class="card">
             <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
+            <h2 class="heading-tertiary">cleaner Code</h2>
             <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension Sass is the most mature, stable, and powerful professional grade CSS extension</p>
         </div>
         <div class="card">
             <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
+            <h2 class="heading-tertiary">Advance Styling</h2>
             <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extensionSass is the most mature, stable, and powerful professional grade CSS extension</p>
         </div>
         <div class="card">
             <i class="icon-basic-world   card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
+            <h2 class="heading-tertiary">responsive Design</h2>
             <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extensionSass is the most mature, stable, and powerful professional grade CSS extension</p>
         </div>
         <div class="card">
             <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
+            <h2 class="heading-tertiary">Reusable</h2>
             <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension Sass is the most mature, stable, and powerful professional grade CSS extension</p>
         </div>
     </div>
@@ -90,23 +90,131 @@
     <div class="flex-container" id="flex-container-fix">
         <div class="card-container">
             <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--1"></div>
+                <div class="d3-card__side d3-card__side--front">
+                    <div class="d3-card__photo d3-card__photo--1">
+                    </div>
+                    <div class="d3-card__heading">
+                        <span class="d3-card__heading-span d3-card__heading-span--1">Sass with HTML & CSS</span>
+                    </div>
+                    <div class="d3-card__content">
+                        <div class="d3-card__content__text">
+                            <p class="para">1. Reference symbol ( & )</p>
+                            <hr class="line">
+                            <p class="para">2. Fuctions</p>
+                            <hr>
+                            <p class="para">3. Interpolation</p>
+                            <hr>
+                            <p class="para">4. Partials and @import directive</p>
+                            <hr>
+                            <p class="para">5. Lists and @each directive</p>
+                        </div>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="d3-card__side d3-card__side--back d3-card__side--back--1">
+                    <p class="para para--white">Want to</p>
+                    <h2 class="back-heading">Know More ?</h2>
+                    <a href="" class="btn btn--white">Click me</a>
+                </div>
             </div>
         </div>
         <div class="card-container">
             <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--2"></div>
+                <div class="d3-card__side d3-card__side--front">
+                    <div class="d3-card__photo d3-card__photo--2">
+                    </div>
+                    <div class="d3-card__heading">
+                        <span class="d3-card__heading-span d3-card__heading-span--2">Sass with React JS</span>
+                    </div>
+                    <div class="d3-card__content">
+                        <div class="d3-card__content__text">
+                            <p class="para">1. Reference symbol ( & )</p>
+                            <hr class="line">
+                            <p class="para">2. Fuctions</p>
+                            <hr>
+                            <p class="para">3. Interpolation</p>
+                            <hr>
+                            <p class="para">4. Partials and @import directive</p>
+                            <hr>
+                            <p class="para">5. Lists and @each directive</p>
+                        </div>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="d3-card__side d3-card__side--back d3-card__side--back--2">
+                    <p class="para para--white">Want to</p>
+                    <h2 class="back-heading">Know More ?</h2>
+                    <a href="" class="btn btn--white">Click me</a>
+                </div>
             </div>
         </div>
         <div class="card-container">
             <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--3"></div>
+                <div class="d3-card__side d3-card__side--front">
+                    <div class="d3-card__photo d3-card__photo--3">
+                    </div>
+                    <div class="d3-card__heading">
+                        <span class="d3-card__heading-span d3-card__heading-span--3">Sass with Express&Node</span>
+                    </div>
+                    <div class="d3-card__content">
+                        <div class="d3-card__content__text">
+                            <p class="para">1. Reference symbol ( & )</p>
+                            <hr class="line">
+                            <p class="para">2. Fuctions</p>
+                            <hr>
+                            <p class="para">3. Interpolation</p>
+                            <hr>
+                            <p class="para">4. Partials and @import directive</p>
+                            <hr>
+                            <p class="para">5. Lists and @each directive</p>
+                        </div>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="d3-card__side d3-card__side--back d3-card__side--back--3">
+                    <p class="para para--white">Want to</p>
+                    <h2 class="back-heading">Know More ?</h2>
+                    <a href="" class="btn btn--white">Click me</a>
+                </div>
             </div>
         </div>
     </div>
+</section>
+<section class="story-section">
+    <div class="align-fix">
+        <h2 class="heading-secondary">Meet our Satisfied Clients</h2>
+    </div>
+    <div class="story">
+        <div class="story__shape">
+            <img src="./img/client-1.jpeg" alt="image of person" class="story__shape__img">
+            <figCaption class="story__caption">
+                jonas Doe
+            </figCaption>
+        </div>
+        <div class="story__text">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quas, incidunt error ipsam itaque
+                aliquam commodi, odio, molestias suscipit labore accusamus sed eum deleniti sequi? Ullam quasi nam 
+                animi sed.Nihil quas, incidunt error ipsam itaque aliquam commodi, odio, molestias suscipit labore 
+            </p>
+        </div>
+    </div>
+    <div class="story">
+        <div class="story__shape">
+            <img src="./img/client-1.jpeg" alt="image of person" class="story__shape__img">
+            <figCaption class="story__caption">
+                jonas Doe
+            </figCaption>
+        </div>
+        <div class="story__text">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quas, incidunt error ipsam itaque
+                aliquam commodi, odio, molestias suscipit labore accusamus sed eum deleniti sequi? Ullam quasi nam 
+                animi sed.Nihil quas, incidunt error ipsam itaque aliquam commodi, odio, molestias suscipit labore 
+            </p>
+        </div>
+    </div>
+    <div class="align-fix"><a href="#" class="btn-s btn--stories">view more &rarr;</a></div>
 </section>
 <footer class="footer">
     <div class="align-fix">
